--- a/dicas_campos.htm
+++ b/dicas_campos.htm
@@ -12,12 +12,12 @@
     <table cellpadding=0 cellspacing=0 align=left>
         <tr>
             <td>
-                <a style="text-decoration:none" ; href="https://www.instagram.com/aroeira32/">
+                <a style="text-decoration:none" href="https://www.instagram.com/aroeira32/">
                     <img width=239 height=259 src="aroeira32_arvore.png" align=left hspace=12 />
                 </a>
             </td>
             <td>
-                <a style="text-decoration:none" ; href="https://www.instagram.com/aroeira32/">
+                <a style="text-decoration:none" href="https://www.instagram.com/aroeira32/">
                     <span class="logo1">A</span>
                     <span class="logo2">roeira</span>
                     <span class="logo3">32</span>
@@ -34,21 +34,15 @@
     <h1>Guia Turístico de Campos do Jordão</h1>
     <ul>
         <li>
-            <p>
-                <a href="https://www.guiacampos.com/de-labirinto-gigante-a-picnic-cervejeiro-5-experiencias-para-fazer-com-sua-mae-em-campos-do-jordao/">
-                    Cinco experiências incríveis para fazer em Campos do Jordão, de labirinto gigante a picnic cervejeiro
-                </a>
-            </p>
+            <a href="https://www.guiacampos.com/de-labirinto-gigante-a-picnic-cervejeiro-5-experiencias-para-fazer-com-sua-mae-em-campos-do-jordao/">
+                  Cinco experiências incríveis para fazer em Campos do Jordão, de labirinto gigante a picnic cervejeiro
+            </a>
         </li>
         <li>
-            <p>
-                <a href="https://www.guiacampos.com/o-que-fazer-em-campos-do-jordao-a-noite-5-dicas-e-mais-uma-extra/">O que fazer em Campos do Jordão à noite</a>
-            </p>
+            <a href="https://www.guiacampos.com/o-que-fazer-em-campos-do-jordao-a-noite-5-dicas-e-mais-uma-extra/">O que fazer em Campos do Jordão à noite</a>
         </li>
         <li>
-            <p>
-                <a href="https://www.guiacampos.com/">Guia completo de Campos de Jordão pode ser encontrado aqui</a>
-            </p>
+            <a href="https://www.guiacampos.com/">Guia completo de Campos de Jordão pode ser encontrado aqui</a>
         </li>
     </ul>
     <p>
@@ -112,7 +106,7 @@
     <p>Restaurantes fora movimentado Capivari que possuem bons cardápios.</p>
 
     <p>
-        <b>Harry Pisek</b>
+        <b>Harry Pisek: </b>
         Considerado um dos melhores restaurantes alemães no Brasil, fica bem próximo do Aroeira32.
         <a href="https://www.restauranteharrypisek.com.br/">Clique aqui para acessar o site.</a>
     </p>
@@ -185,6 +179,15 @@
         etapas com o conceito de slow food. É possível passear pela vinícola e pelas plantações de árvores
         frutíferas do local. <a href="https://www.entrevilas.com.br/">Clique aqui para acessar o site</a>.
     </p>
+
+
+    <h1>Vinícula</h1>
+    <p>
+        <b>Santa Maria: </b>
+        Localizada entre Campos do Jordão e São Bento do Sapucaí, possui visitas guiadas e restaurante.
+        <a href="https://villasantamaria.com.br/">Clique aqui para acessar o site.</a>
+    </p>
+
 
     <h1>Restaurante Vegetariano</h1>
     <p>
