--- a/dicas_campos.htm
+++ b/dicas_campos.htm
@@ -180,19 +180,17 @@
         frutíferas do local. <a href="https://www.entrevilas.com.br/">Clique aqui para acessar o site</a>.
     </p>
 
-
     <h1>Vinícula</h1>
     <p>
         <b>Santa Maria: </b>
-        Localizada entre Campos do Jordão e São Bento do Sapucaí, possui visitas guiadas e restaurante.
+        localizada entre Campos do Jordão e São Bento do Sapucaí, possui visitas guiadas e restaurante.
         <a href="https://villasantamaria.com.br/">Clique aqui para acessar o site.</a>
     </p>
-
 
     <h1>Restaurante Vegetariano</h1>
     <p>
         <b>Alquimia: </b>
-        este restaurante vegetariano e vegano é considerado um dos melhores do Brasil.
+        este restaurante que possui cardápio vegetariano e vegano é considerado um dos melhores do Brasil.
         <a href="https://restaurantealquimia.com.br/">Clique aqui para acessar site</a>.
     </p>
 
