--- a/dicas_campos.htm
+++ b/dicas_campos.htm
@@ -8,7 +8,7 @@
     <title>Aroeira32</title>
 </head>
 
-<body bgcolor="#D3CAB7" lang=PT-BR link="#0563C1" vlink="#954F72">
+<body bgcolor="#C6B5A1" lang=PT-BR link="#0563C1" vlink="#954F72">
     <table cellpadding=0 cellspacing=0 align=left>
         <tr>
             <td>
@@ -201,6 +201,11 @@
         que dura aproximadamente uma hora. É necessário comprar ingressos com antecedência pelo site.
         <a href="https://www.badenbaden.com.br/tour-informacoes-gerais/">Clique aqui para acessar o site</a>.
     </p>
+   <p>
+        <b>Cervejaria Luss: </b>
+        aos antigos donos da Baden Baden inauguram uma nova marca. Localizada no Bosque do Silêncio.
+        <a href="https://www.instagram.com/lusscervejaria/">Clique aqui para acessar o site</a>.
+    </p>	
     <p>
         <b>Caras de Malte: </b>
         é um restaurante e microcervejaria localizada apenas a 1,7 km do Aroeira32.
@@ -315,7 +320,12 @@
         especializado em esporte de aventura com várias modalidades.
         <a href="https://tarundu.com.br/">Clique aqui para acessar o site</a>.
     </p>
-
+    <p>
+        <b>Bosque do Silêncio: </b> 
+        com mais de 100.000 	m² e beleza exuberante que convida à contemplação e à quietude interior. Possui arborismo de quase 2 km de extensão, café e cervejarias.
+        <a href="http://bosquedosilencio.com.br/">Clique aqui para acessar o site</a>.
+    </p>
+	
     <h1>Supermercados</h1>
     <p>
         <b>Supercampos: </b>
@@ -330,5 +340,12 @@
         Av. Dr. Januário Miraglia, 2784.
     </p>
 
+
+    <h1>Lenha</h1>
+    <p>
+        <b>Casa da Madeira: </b>
+        entregam no condomínio. Whatsapp (12) 99600-1960. Instagram <a href="https://www.instagram.com/casadamadeiracampos/"> clique aqui</a>.
+    </p>
+	
 </body>
 </html>
