--- a/dicas_checkout.htm
+++ b/dicas_checkout.htm
@@ -7,7 +7,7 @@
 		<title>Aroeira32</title>
 	</head>
 	
-	<body bgcolor="#FBE4D5" lang=PT-BR link="#0563C1" vlink="#954F72">
+	<body bgcolor="#C6B5A1" lang=PT-BR link="#0563C1" vlink="#954F72">
 		<table cellpadding=0 cellspacing=0 align=left>
 			<tr>
 				<td>
