--- a/dicas_checkout.htm
+++ b/dicas_checkout.htm
@@ -36,8 +36,7 @@
 		<div id="recuo">
 			<ul>
 				<li>Fechar todas as torneiras;</li>
-				<li>Fechar o registro de gás da lareira;</li>
-				<li>Retirar o plug da tomada dos aquecedores, da lareira, da cafeteira e da Alexa;</li>
+				<li>Retirar o plug da tomada dos aquecedores, da cafeteira e da Alexa;</li>
 				<li>Trancar todas as portas e janelas;</li>	
 				<li>Verificar se pegou todos os seus pertences: revise os quartos, banheiros e mesanino;</li>
 				<li>As chaves devem ser devolvidas na portaria do condomínio.</li>
